api get 1 issue or all
