# blacklotus/urls.py
@@ -12,15 +12,15 @@ urlpatterns = [
     path('login/',views.redirectLogin, name = 'login'),
     path('social-auth/', include('social_django.urls', namespace='social')),
     path('logout/',views.custom_logout, name='logout'),
-    path('<str:usernameProf>',views.showProfile, name = 'profile'),
-    path('accounts/profile/',views.showProfileRedir, name = 'profileR'),
-    path('Edit/',ProfileEditView.as_view(), name='editprofile'),
-    path('Issues/', views.showIssues,name='home'),
-    path('NewIssue/', views.CreateIssueForm, name="newIssue"),
-    path('BulkIssues/', views.BulkIssueForm, name="bulkIssue"),
-    path('Issue/<int:num>/', views.SeeIssue, name="seeIssue"),
-    path('Issue/<int:id>/BlockIssue/', views.BlockIssueForm, name="blockIssue"),
-    path('Issue/<int:id>/Edit/', views.EditIssue, name='edit'),
-    path('Issue/<int:id>/Deadline/', views.deadLineForm, name = 'deadline'),
-    path('api/Issue/',IssueAPIView.as_view())
+    #path('<str:usernameProf>',views.showProfile, name = 'profile'),
+    #path('accounts/profile/',views.showProfileRedir, name = 'profileR'),
+    #path('edit/',ProfileEditView.as_view(), name='editprofile'),
+    #path('issues/', views.showIssues,name='home'),
+    #path('newIssue/', views.CreateIssueForm, name="newIssue"),
+    #path('bulk_issues/', views.BulkIssueForm, name="bulkIssue"),
+    #path('issue/<int:num>/', views.SeeIssue, name="seeIssue"),
+    #path('issue/<int:id>/BlockIssue/', views.BlockIssueForm, name="blockIssue"),
+    #path('issue/<int:id>/Edit/', views.EditIssue, name='edit'),
+    #path('issue/<int:id>/Deadline/', views.deadLineForm, name = 'deadline'),
+    path('issue/',IssueAPIView.as_view())
 ]
