# openapi.yaml
@@ -2,16 +2,23 @@ openapi: 3.0.2
 info:
   version: 1.0.0
   title: BlackLotus
-  description: "This is the Open API documentation for the REST API of our beloved application **Wall of Tweets** deployed at <https://fib-asw-wotapi.fly.dev/>. <br>All operations are executable. Only one operation requires authentication: `deleteTweet`. In this case, you must **Authorize** your request by providing the token value you got when you created the tweet."
+  description: "POR PONER"
 servers:
   - url: 'http://127.0.0.1:8000/'
 paths:
-  /api/issue/:
+  /issue/:
     get:
       tags:
       - tweets
       summary: Retrieves all the Tweets
       operationId: getAllTweets
+      parameters:
+      - name: id
+        in: query
+        description: Optional id of the issue to retrieve
+        required: false
+        schema:
+          type: integer
       responses:
         200:
           description: successful operation
